syntax = "proto3";

package friend;

service FriendService {
  rpc AddFriend (AddFriendRequest) returns (FriendResponse) {}
  rpc RemoveFriend (RemoveFriendRequest) returns (FriendResponse) {}
  rpc GetFriends (GetFriendsRequest) returns (FriendListResponse) {}
  rpc SearchFriend (SearchFriendRequest) returns (FriendListResponse) {}
}

message AddFriendRequest {
  string username = 1;
  string friend_username = 2;
}

message RemoveFriendRequest {
  string username = 1;
  string friend_username = 2;
}

message GetFriendsRequest {
  string username = 1;
}

message SearchFriendRequest {
  string username = 1;
  string query = 2;
}

message FriendResponse {
  string message = 1;
}

message FriendListResponse {
  repeated FriendInfo friends = 1;
}

message FriendInfo {
  string friend_username = 1;
  string friend_status = 2;
  string friend_profile_pic = 3;
  string added_at = 4;
}