syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  rpc GetUserByUsername (GetUserRequest) returns (UserResponse) {}
  rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse) {}
  rpc GetAllUsers (GetAllUsersRequest) returns (SearchUsersResponse) {}
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password_hash = 3;
  string profile_pic = 4;
  string status = 5;
}

message GetUserRequest {
  string username = 1;
}

message SearchUsersRequest {
  string query = 1;
}

message UpdateUserRequest {
  string username = 1;
  string email = 2;
  string password_hash = 3;
  string profile_pic = 4;
  string status = 5;
}

message DeleteUserRequest {
  string username = 1;
}

message GetAllUsersRequest {}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string profile_pic = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
  bool is_admin = 8;
  string message = 9;
}

message SearchUsersResponse {
  repeated UserResponse users = 1;
}